<resources>
    <string name="app_name">Postit</string>
    <string name="pass_hint">Your password here</string>
    <string name="Mail_hint">Your email here</string>
    <string name="Logocomment">LogoForLoginPage</string>
    <string name="login">Login</string>
    <string name="new_account">New here ?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="createaccount">Create Account</string>
    <string name="already">Already a member ? Sign in</string>
    <string name="confirmPassword">Confirm your password</string>
    <string name="setup_name_hint">Your name</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_value">You can start typing</string>
    <string name="tag_post">Add your #</string>
    <string name="post_btn">Now post</string>

    <string name="submited_post_msg">The post has been submitted to the administrator.</string>
    <string name="unsubmited_post_msg">Please fill in all fields.</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notifications_text">Notifications</string>
    <string name="bottom_ac_text">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog_post_date">Blog Post date</string>
    <string name="username">Username</string>
    <string name="content">Content</string>
    <string name="textview">TextView</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="setting_updated">Settings are updated</string>

    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>


    <!-- New -->

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="post_content">Your text here</string>
    <string name="post_title_here">Title</string>
    <string name="select_categories">Select post categories</string>


    <!--Ctegories-->


    <string name="sport">Sport</string>
    <string name="health">Health</string>
    <string name="Food">Food</string>
    <string name="political">Political</string>
    <string name="news">News</string>
    <string name="gaming">Gaming</string>
    <string name="finance">Finance</string>
    <string name="music">Music</string>
    <string name="moovie">Moovie</string>
    <string name="fashion">Fashion</string>
    <string name="travel">Travel</string>
    <string name="other">Other</string>
    <string name="fill_image">Please provide an image</string>
    <string name="fill_categorie">Please check at least one category</string>
    <string name="likes">Likes</string>


    <string name="my_files">My Files</string>
    <string name="shared">Shared</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="administration_space">Admin panel</string>
    <string name="menu">Menu</string>

    <string name="comments">Comments:</string>
    <string name="your_comment_here">Your comment here...</string>
    <string name="notification_comment_message">commented on your publication</string>
    <string name="notification_like_message">liked your publication.</string>
    <string name="user_administration">User management</string>
    <string name="create_admin">Create administarator</string>
    <string name="create_user">Create user</string>
    <string name="ban_user">Ban user</string>
    <string name="unpublished_publication">Unpublished</string>
    <string name="validate">Validate</string>
    <string name="refuse">Refuse</string>
    <string name="successfull_published">Successfully published</string>
    <string name="unsuccessfull_published">Post successfully declined</string>

    <string name="your_post">Your post</string>
    <string name="been_published">has been published.</string>
    <string name="not_been_published">has been rejected.</string>
    <string name="see_as_user">See as a user</string>
    <string name="new_sub">Submit a new publication</string>
    <string name="btn_sign_up">Create</string>
    <string name="notification_new_post">has made a new publication.</string>
</resources>